--- a/Form1.resx
+++ b/Form1.resx
@@ -57,4 +57,77 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACa
+        DgAAAk1TRnQBSQFMAgEBBgEAAfgBAAH4AQABHgEAAR4BAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABeAMAATwDAAEBAQABCAUAASABHBgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQABwAHc
+        AcABAAHwAcoBpgEAATMFAAEzAQABMwEAATMBAAIzAgADFgEAAxwBAAMiAQADKQEAA1UBAANNAQADQgEA
+        AzkBAAGAAXwB/wEAAlAB/wEAAZMBAAHWAQAB/wHsAcwBAAHGAdYB7wEAAdYC5wEAAZABqQGtAgAB/wEz
+        AwABZgMAAZkDAAHMAgABMwMAAjMCAAEzAWYCAAEzAZkCAAEzAcwCAAEzAf8CAAFmAwABZgEzAgACZgIA
+        AWYBmQIAAWYBzAIAAWYB/wIAAZkDAAGZATMCAAGZAWYCAAKZAgABmQHMAgABmQH/AgABzAMAAcwBMwIA
+        AcwBZgIAAcwBmQIAAswCAAHMAf8CAAH/AWYCAAH/AZkCAAH/AcwBAAEzAf8CAAH/AQABMwEAATMBAAFm
+        AQABMwEAAZkBAAEzAQABzAEAATMBAAH/AQAB/wEzAgADMwEAAjMBZgEAAjMBmQEAAjMBzAEAAjMB/wEA
+        ATMBZgIAATMBZgEzAQABMwJmAQABMwFmAZkBAAEzAWYBzAEAATMBZgH/AQABMwGZAgABMwGZATMBAAEz
+        AZkBZgEAATMCmQEAATMBmQHMAQABMwGZAf8BAAEzAcwCAAEzAcwBMwEAATMBzAFmAQABMwHMAZkBAAEz
+        AswBAAEzAcwB/wEAATMB/wEzAQABMwH/AWYBAAEzAf8BmQEAATMB/wHMAQABMwL/AQABZgMAAWYBAAEz
+        AQABZgEAAWYBAAFmAQABmQEAAWYBAAHMAQABZgEAAf8BAAFmATMCAAFmAjMBAAFmATMBZgEAAWYBMwGZ
+        AQABZgEzAcwBAAFmATMB/wEAAmYCAAJmATMBAANmAQACZgGZAQACZgHMAQABZgGZAgABZgGZATMBAAFm
+        AZkBZgEAAWYCmQEAAWYBmQHMAQABZgGZAf8BAAFmAcwCAAFmAcwBMwEAAWYBzAGZAQABZgLMAQABZgHM
+        Af8BAAFmAf8CAAFmAf8BMwEAAWYB/wGZAQABZgH/AcwBAAHMAQAB/wEAAf8BAAHMAQACmQIAAZkBMwGZ
+        AQABmQEAAZkBAAGZAQABzAEAAZkDAAGZAjMBAAGZAQABZgEAAZkBMwHMAQABmQEAAf8BAAGZAWYCAAGZ
+        AWYBMwEAAZkBMwFmAQABmQFmAZkBAAGZAWYBzAEAAZkBMwH/AQACmQEzAQACmQFmAQADmQEAApkBzAEA
+        ApkB/wEAAZkBzAIAAZkBzAEzAQABZgHMAWYBAAGZAcwBmQEAAZkCzAEAAZkBzAH/AQABmQH/AgABmQH/
+        ATMBAAGZAcwBZgEAAZkB/wGZAQABmQH/AcwBAAGZAv8BAAHMAwABmQEAATMBAAHMAQABZgEAAcwBAAGZ
+        AQABzAEAAcwBAAGZATMCAAHMAjMBAAHMATMBZgEAAcwBMwGZAQABzAEzAcwBAAHMATMB/wEAAcwBZgIA
+        AcwBZgEzAQABmQJmAQABzAFmAZkBAAHMAWYBzAEAAZkBZgH/AQABzAGZAgABzAGZATMBAAHMAZkBZgEA
+        AcwCmQEAAcwBmQHMAQABzAGZAf8BAALMAgACzAEzAQACzAFmAQACzAGZAQADzAEAAswB/wEAAcwB/wIA
+        AcwB/wEzAQABmQH/AWYBAAHMAf8BmQEAAcwB/wHMAQABzAL/AQABzAEAATMBAAH/AQABZgEAAf8BAAGZ
+        AQABzAEzAgAB/wIzAQAB/wEzAWYBAAH/ATMBmQEAAf8BMwHMAQAB/wEzAf8BAAH/AWYCAAH/AWYBMwEA
+        AcwCZgEAAf8BZgGZAQAB/wFmAcwBAAHMAWYB/wEAAf8BmQIAAf8BmQEzAQAB/wGZAWYBAAH/ApkBAAH/
+        AZkBzAEAAf8BmQH/AQAB/wHMAgAB/wHMATMBAAH/AcwBZgEAAf8BzAGZAQAB/wLMAQAB/wHMAf8BAAL/
+        ATMBAAHMAf8BZgEAAv8BmQEAAv8BzAEAAmYB/wEAAWYB/wFmAQABZgL/AQAB/wJmAQAB/wFmAf8BAAL/
+        AWYBAAEhAQABpQEAA18BAAN3AQADhgEAA5YBAAPLAQADsgEAA9cBAAPdAQAD4wEAA+oBAAPxAQAD+AEA
+        AfAB+wH/AQABpAKgAQADgAMAAf8CAAH/AwAC/wEAAf8DAAH/AQAB/wEAAv8CAAP//wDnAAHzBPkLAAHz
+        BPkIAAHzBPkNAAHzBPlEAAb5CgAG+QcABvkMAAb5QgAB4wH5Ab0CAAL5CQAB4wH5Ab0CAAL5BgAB4wH5
+        Ab0CAAL5CwAB4wH5Ab0CAAL5PgAG+QH/AgAN+QH/AgAK+QH/AgAP+QH/AgAE+TwAAf8G+QH/Ab0O+QH/
+        Ab0E+QFHAf8F+QH/Ab0Q+QH/Ab0D+QFHPQAc+QIAHPk+ABz5AgAc+T4AHPkCABz5PgAc+QIAHPk+ABz5
+        AgAc+T4AFvkIABz5PgAW+QgAG/kB/z4AFvkIABX5Af9EABb5CAAV+UUAF/kHABX5RQAa+QQAFflFABj5
+        AeMFABb5RAAR+Q0AAb0Z+UAAEfkOAAG9FvkB40EAAb0Q+WgAAb0O+QH//wD/AP8A/wDFAAHzBEMLAAHz
+        BEMIAAHzBEMNAAHzBEMjAAH/A0MSAAH/A0MHAAZDCgAGQwcABkMMAAZDBAAB/wP5EgAB/wP5BAABFAND
+        EgABFANDBgAB7AFDAQcCAAJDCQAB7AFDAQcCAAJDBgAB7AFDAQcCAAJDCwAB7AFDAQcCAAJDBAAE+RIA
+        BPkEAARDEgAEQwIAARUFQwH0AgANQwH0AgAFQwEVBEMB9AIAD0MB9AIABEMCAAT5EgAE+QQAGkMCAAH/
+        BkMB9AEHDkMB9AEHBEMBFAH/BUMB9AEHEEMB9AEHA0MBFAIAGvkEABpDAwAcQwIAHEMDABr5BAAaQwMA
+        HEMCABxDAwAa+QQAGkMDABxDAgAcQwMAGvkEAANDAQcCAA5DAQcCAANDAwAcQwIAHEMDAAP5Ab0CAA75
+        Ab0CAAP5BAADQwH0AgADQwH/BwADQwH0AgADQwMAHEMCABxDAwAD+QH/AgAD+QH/BwAD+QH/AgAD+QQA
+        AesDQwH0AQcDQwEVBgAB/wRDAfQBBwNDAwAWQwgAHEMDAAHjA/kB/wG9BPkGAAH/BPkB/wG9A/kFABlD
+        AwAWQwgAGkMBFAH/BAAZ+QUAAewXQwH/AwAWQwgAFUMB/woAAeMX+QH/BgAWQwH0BAAWQwgAFUMMABb5
+        AfQHAAH0AkMCAAH/AfEB9wHsARIBFAFDARQB6gHsAQcB8wIAAf8CQwUAFkMBFQcAFUMMAAH/AvkCAAH/
+        ARoBlAHjAkcB+QJHARYBlAH0AgAB/wL5CQACQxAAAfMCQwUAGkMEABVDDQAC+RAAAfMC+QkAARUBQwHy
+        DwACQwH/BQAYQwHrBQAVQwEVDAAC+QEbDwAC+QH/CQAB/wJDDwACQwYAEUMNAAG8GUMIAAH/AvkPAAL5
+        CwACQw4AAQcBQwEUBgARQw4AAbwWQwHrCgAC+Q4AAb0B+QFHCwAB7AJDAfMLAAHvAkMHAAG8EEMwAAHj
+        AvkB9AsAAZQC+Q0AEEMB7wgAAbwNQwEUAf8xABD5AZQOAAH0ARILQwHsTAAB/wFHC/kB4/8A6QABQgFN
+        AT4HAAE+AwABKAMAAXgDAAE8AwABAQEAAQEFAAHAAQMWAAP/AQAH/wHwCAAH/wHwCAAH/wHwCAAH/wHw
+        CAAB+AE/AfgBPwHBAf8B8AFwCAAB+AEfAfgBHwHAAf8B8AEwCAAB8QGfAfEBnwGMAf8B4wEwCAABAQGA
+        AQEBgAEMAQABAxkAAYACAAEGAwABEAgAAYACAAEGAwABEAgAAYACAAEGAwABEAgAAYACAAEGAwABEAgA
+        AYACAAEGAwABEAgAAYABAAEBAf4DAAEQCAABgAEAAQEB/gMAARAIAAGAAQABAQH+AgABBwHwCAABgAEA
+        AQEB/gIAAQ8B8AgAAYACAAH+AgABDwHwCAABgAIAAR4CAAEPAfAIAAGAAgABPgIAAQcB8AgAAYABAAE/
+        Af4DAAFwCAABgAEAAT8B/wMAAfAIAAGAAQABPwT/AfAIAAHAAQABPwT/AfAIAAf/AfAIAAf/AfAIAAf/
+        AfAIAAf/AfAIAAf/AfAIAA//AQAP/wEAD/8BAA//AQAE/wHgAf8B4AH/AQcB/wHBBP8BAAHDAv8BDwHg
+        AX8B4AF/AQMB/wHAAfAC/wHDAQABwwL/AQ8BxgF/AcYBfgEzAf8BjAHwAv8BwwEAAcMC/wEMAQYBAAEG
+        AQABMAEAAQwBMAL/AcMBAAHAAgABDAcAATACAAEDAQABwAIAAQ4DAAEYAwABcAIAAQMBAAHAAgABDgMA
+        ARgDAAFwAgABAwEAAcACAAEOAwABGAMAAXACAAEDAQABwwEAAQEBjgMAARgDAAFwAcABAAFjAQABwwEP
+        AeEBjgMAARgDAAFwAcMB+AFjAQABwAEPAcABDgIAAQcB+AMAAXABAwHwAQMBAAHgAgABDgIAAQcB+AMA
+        AXgCAAEDAQAB4AIAAQ4CAAEHAfgCAAEfAfgCAAEDAQAB8AIAAR4CAAEHAfgCAAE/AfwCAAEHAQAB8QGA
+        AQYBPgIAAQMB+AIAAT8B/AFgAQEBjwEAAfkB/wH+AT4DAAF4AgABPwH+AX8B/wGPAQAB+AH/Af4BPgMA
+        AfgCAAEfAf4BPwH/AY8BAAH4Af8B/gF+AgAB/wH4AgABAQH+AT8B/wGfAQAB/AH/AfwBfgIAAf8B/AIA
+        AQMB/wE/Af8BHwEAAfwBPwH4Af4CAAb/AQ8B/gE/AQAB/gIAAf8CAAb/AYABAAE/AQAB/wEAAQMJ/wHA
+        AQAB/wEAD/8BAA//AQAP/wEAD/8BAAs=
+</value>
+  </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, System.Private.CoreLib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e">
+    <value>47</value>
+  </metadata>
 </root>
