--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -118,17 +118,38 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="addVeh" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Buttons\addVeh.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="car" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Vehicles\car.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="car_red" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Vehicles\car_red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="delVeh" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Buttons\delVeh.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="endRide" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Buttons\endRide.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="exportRide" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Buttons\exportRide.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="exportVehs" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Buttons\exportVehs.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="importRide" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Buttons\importRide.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="importVehs" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Buttons\importVehs.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="navbar_dash_sel" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Icons\navbar_dash_sel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="navbar_dash_unsel" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Icons\navbar_dash_unsel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="navbar_export_sel" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Icons\navbar_export_unsel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="navbar_export_unsel" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Icons\navbar_export_sel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="navbar_flag_sel" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Icons\navbar_flag_sel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -141,5 +162,23 @@
   </data>
   <data name="navbar_vehs_unsel" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Icons\navbar_vehs_unsel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="startRide" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Buttons\startRide.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="truck" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Vehicles\truck.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="truck_red" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Vehicles\truck_red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="updVeh" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Buttons\updVeh.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="van" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Vehicles\van.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="van_red" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Vehicles\van_red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
