--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -127,6 +127,9 @@
   <data name="car_red" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Vehicles\car_red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="deleteRides" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Buttons\deleteRides.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="delVeh" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Buttons\delVeh.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
