--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -148,6 +148,9 @@
   <data name="importVehs" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Buttons\importVehs.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="mainIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Icons\mainIcon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="navbar_dash_sel" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Icons\navbar_dash_sel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
